# spotify-readme

./: .gitignore  README.md  _redirects  get_refresh_token.py  index.py  pyproject.toml  refactor.py  requirements.txt  vercel.json  vercel_edge.py
.github/workflows/: update-daylist.yml
app/: main.py
base64/: placeholder_image.txt
scripts/: fetch_daylist.py  get_refresh_token.py
templates/: recent.html
