[project]
name = "spotify-readme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-apscheduler>=1.13.1",
    "flask-caching>=2.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "markupsafe>=3.0.1",
    "playwright>=1.49.0",
]
